Tugas Besar Portofolo

--- a/index.html
+++ b/index.html
@@ -1,28 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portofolio Farrel</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    k
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Halaman Pertama -->
+    <!-- ↓ Animasi Background ↓ -->
+    <div class="wrapper">
+      <div class="box">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+    <!-- ↑ Animasi Background ↑ -->
 
-</head>
-<body>
-<!-- Halaman Pertama -->
- <img src="img/backgroundimg.png" alt="">
-<header class="header">
-    <a href="#home" class="logo">F<span>A.</span></a>
-     
-    <nav class="navbar">
-        <a href="#home" class="active">Home</a>
-        <a href="#profile">Profile</a>
-        <a href="#pendidikian">Pendidikan</a>
-        <a href="#hobi">Hobi</a>
-        <a href="contact">Kontak</a>
-    </nav>
+    <!-- ↓ Bagian Navbar ↓ -->
+    <header class="header">
+      <a href="#home" class="logo">F<span>A.</span></a>
+      <i class="bx bx-menu" id="menu-icon"></i>
+      <nav class="navbar">
+        <a href="#home" class="active">Home<span></span></a>
+        <a href="#profile">Profile<span></span></a>
+        <a href="#pendidikan">Pendidikan<span></span></a>
+        <a href="#hobi">Hobi<span></span></a>
+        <a href="#kontak">Kontak<span></span></a>
+      </nav>
+    </header>
+    <!-- ↑ Bagian Navbar ↑ -->
 
-</header>
+    <!-- ↓ Bagian Home ↓ -->
+    <section class="home" id="home">
+      <div class="home-img">
+        <img src="img/Farrel.png" alt="" />
+      </div>
 
-</body>
+      <div class="home-content">
+        <h1>Perkenalkan Aku <span>Muhammad Farrel T.A</span></h1>
+        <h3>Saya Seorang <span>Mahasiswa</span></h3>
+        <p>
+          Halo! Saya merupakan mahasiswa teknik UNPAS dan program studi saya
+          yaitu <span>Teknik Indormatika</span>.
+        </p>
+      </div>
+    </section>
+    <!-- ↑ Bagian Home ↑ -->
+
+    <!-- ↓ Halaman Kedua ↓ -->
+    <div class="wrapper2">
+      <div class="rectangle">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+    <section class="profile" id="profile">
+      <div class="profile-content">
+        <h2 class="heading">Profile <span>Saya</span></h2>
+        <h3>
+          <p>
+            Perkenalkan saya
+            <span>Muhammad Farrel Triputra Alfarizqi </span>seorang mahasiswa
+            Teknik <span>UNPAS</span> yang gemar bermain game yang serba cepat
+            seperti <span>Rhythm Games</span> dan <span>Tetris</span>. Saya juga
+            memiliki hobi mengetik seperti melakukan
+            <span>Typing Test</span> dan saya juga hobi menonton sebuah
+            <span>Film, Video, dan Dokumenter.</span>
+          </p>
+        </h3>
+      </div>
+      <div class="profile-img">
+        <img src="img/Profilimg.jpeg" alt="" />
+      </div>
+    </section>
+    <!-- ↑ Halaman Kedua ↑ -->
+
+    <!-- ↓ Halaman Ketiga ↓ -->
+    <div class="wrapper3">
+      <div class="wavey">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+    <section class="pendidikan" id="pendidikan">
+      <h2 class="heading">Pendidikan <span>Saya</span></h2>
+
+      <div class="pendidikan-container">
+        <div class="pendidikan-box">
+          <div class="pendidikan-info">
+            <h4>SDN Cangkuang 02</h4>
+            <p>
+              Jl. Sukamenak No.189, Cangkuang Kulon, Kec. Dayeuhkolot, Kabupaten
+              Bandung, Jawa Barat 40239
+            </p>
+          </div>
+        </div>
+
+        <div class="pendidikan-box">
+          <div class="pendidikan-info">
+            <h4>SMPN 3 Bandung</h4>
+            <p>
+              Jl. Raden Dewi Sartika No.96, Pungkur, Kec. Regol, Kota Bandung,
+              Jawa Barat 40252
+            </p>
+          </div>
+        </div>
+
+        <div class="pendidikan-box">
+          <div class="pendidikan-info">
+            <h4>SMAN 4 Bandung</h4>
+            <p>
+              Jl. Gardujati No.20, Kb. Jeruk, Kec. Andir, Kota Bandung, Jawa
+              Barat 40181
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ↑ Halaman Ketiga ↑ -->
+
+    <!-- ↓ Halaman Keempat ↓ -->
+    <section class="hobi" id="hobi">
+      <div class="wrapper">
+        <div class="box">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+      <h2 class="heading">Hobi <span>Saya</span></h2>
+
+      <div class="hobi-container">
+        <div class="hobi-box">
+          <div class="hobi-info">
+            <h4>Bermain Game</h4>
+            <video width="100%" height="auto" autoplay loop muted>
+              <source src="video/Gaming.mp4" type="video/mp4" />
+            </video>
+          </div>
+        </div>
+
+        <div class="hobi-box">
+          <div class="hobi-info">
+            <h4>Mengetik</h4>
+            <video width="100%" height="auto" autoplay loop muted>
+              <source src="video/Typing.mp4" type="video/mp4" />
+            </video>
+          </div>
+        </div>
+
+        <div class="hobi-box">
+          <div class="hobi-info">
+            <h4>Menonton</h4>
+            <video width="100%" height="auto" autoplay loop muted>
+              <source src="video/Watching.mp4" type="video/mp4" />
+            </video>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ↑ Halaman Keempat ↑ -->
+
+    <!-- ↓ Halaman Kelima ↓ -->
+    <div class="wrapper2">
+      <div class="rectangle">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+    <section class="kontak" id="kontak">
+      <h2 class="kontak-title">Hubungi <span>Saya</span></h2>
+      <form
+        class="kontak-form"
+        action="https://formsubmit.co/muhammadfarrel2020@gmail.com"
+        method="POST"
+      >
+        <div class="input-box">
+          <input
+            type="text"
+            name="Name"
+            placeholder="Nama Kepanjangan"
+            required
+          />
+          <input type="email" name="Email" placeholder="Email" required />
+          <textarea
+            name="Pesan"
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Pesan"
+            required
+          ></textarea>
+          <button class="btn" type="submit">Send</button>
+        </div>
+      </form>
+    </section>
+    <!-- ↑ Halaman Kelima ↑ -->
+    <!-- ↓ Bagian Footer ↓ -->
+    <footer class="footer">
+      <p class="copyright">
+        <span>© FA. </span>| All Rights Deserved
+      </p>
+    </footer>
+    <!-- ↑ Bagian Footer ↑ -->
+     <script src="js/script.js"></script>
+  </body>
 </html>
